Tópico HTML, Atividade 1

--- a/Index.html
+++ b/Index.html
@@ -11,10 +11,10 @@
     <h2>Bem- vindo à MusicDot, seu portal de cursos de musica
         online.
     </h2>
-    <p>-Confira nossas promoções</p>
-    <p>-Receba informações sobre nossos lançamentos por email</p>
-    <p>-Navegue por todos nossos cursos disponiveis</p>
-    <p>Aprenda sem sair de casa</p>
+    <p>ºConfira nossas promoções.</p>
+    <p>ºReceba informações sobre nossos lançamentos por email.</p>
+    <p>ºNavegue por todos nossos cursos disponiveis.</p>
+    <p>ºAprenda sem sair de casa.</p>
     
 </body>
 </html>
