Topico HTML, Atividade 2

--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +8,14 @@
 <body>
     <h1>MusicDot</h1>
 
-    <h2>Bem- vindo à MusicDot, seu portal de cursos de musica
+    <h2>Bem-vindo à MusicDot, seu portal de cursos de musica
         online.
     </h2>
-    <p>ºConfira nossas promoções.</p>
-    <p>ºReceba informações sobre nossos lançamentos por email.</p>
-    <p>ºNavegue por todos nossos cursos disponiveis.</p>
-    <p>ºAprenda sem sair de casa.</p>
-    
+    <ul>
+        <li>Confira nossas promoções.</li>
+        <li>Receba informações sobre nossos lançamentos por email.</li>
+        <li>Navegue por todos nossos cursos disponiveis.</li>
+        <li>Aprenda sem sair de casa.</li>
+    </ul>
 </body>
 </html>
