--- a/paginainicial.html
+++ b/paginainicial.html
@@ -2,7 +2,8 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <title>Sobre a empresa - MusicDot</title>
+    <title>MusicDot | Sobre a empresa</title>
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <header>
