--- a/paginainicial.html
+++ b/paginainicial.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <img src="img/logo.svg" alt="Logo da MusicDot" />
-      <h1>Sobre a empresa</h1>
+      <h1>Sobre a empresa.</h1>
     </header>
 
     <main>
