--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
         <li>Confira nossas promoções.</li>
         <li>Receba informações sobre nossos lançamentos por email.</li>
         <li>Navegue por todos nossos cursos disponiveis.</li>
-        <li>Aprenda sem sair de casa.</li>
+        <li>Aprenda sem sair do conforto da sua casa.</li>
     </ul>
 </body>
 </html>
